--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,10 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+body {
+  background: green;
+}
+
+.card {
+  font-size: 7rem;
+  max-width: 23rem;
+  border-radius: 20px;
+}
